--- a/vit-financas/src/styles/style.css
+++ b/vit-financas/src/styles/style.css
@@ -14,12 +14,20 @@
 }
 
 a {
-  font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
 }
 a:hover {
   color: #535bf2;
+}
+
+html, body {
+  margin: 0;
+  height: 100vh;
+  padding: 0;
+}
+main {
+  height: 100vh;
 }
 
 /* body {
@@ -65,7 +73,7 @@ button:focus-visible {
   text-align: center;
 } */
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -76,4 +84,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
